@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------
 Version 4.5.6  [v4-beta] (rgerhards), 2009-09-??
+- bugfix: named pipes did no longer work (they always got an open error)
+  this was a regression from the omfile rewrite in 4.5.0
 - bugfix(minor): diag function returned wrong queue memeber count
   for the main queue if an active DA queue existed. This had no relevance
   to real deployments (assuming they are not running the debug/diagnostic
@@ -133,6 +135,8 @@ Version 4.5.0  [DEVEL] (rgerhards), 2009-07-02
   removes false positives (but may cause some trouble with hostname
   parsing). For details, see this bug tracker:
   http://bugzilla.adiscon.com/show_bug.cgi?id=126
+- omfile rewrite to natively support zip files (includes large extension
+  of the stream class)
 - added configuration commands (see doc for explanations)
   * $OMFileZipLevel
   * $OMFileIOBufferSize
